tests/parsing/smtlib/v2.7/errors/150_function_def_bad_return_sort_1.smt2
(set-logic ALL)
(define-fun-rec foo () _)
